--- a/src/styles/Carrusel.css
+++ b/src/styles/Carrusel.css
@@ -1,1 +1,32 @@
-
+body {
+    background-color: black;
+  }
+  
+  #Carousel{
+    position: flex;
+    width: 100%;
+  }
+  
+  #poster1, #poster2, #poster3 {
+    width: 100%;
+    opacity: 0.2;
+  }
+  
+  .estrella {
+    display: inline;  
+    margin: 3px;
+    width: 35px;
+  }
+  
+  .duracion > img {
+    padding-bottom: 5px;
+    width: 35px;
+  }
+  
+  #pos1-estrella5 {
+    display: none;
+  }
+  
+  #sinopsis-poster1, #sinopsis-poster2, #sinopsis-poster3  {
+    text-align: justify;
+  }
