--- a/src/styles/navBootstrap.css
+++ b/src/styles/navBootstrap.css
@@ -2,6 +2,7 @@
     width: 80px;
     background-color: transparent;
     margin-top: 0.8vw;
+    margin-bottom: 0.8vw;
     margin-left: 0.8vw;
     margin-right:25vw;
 }
