--- a/src/styles/Carrusel.css
+++ b/src/styles/Carrusel.css
@@ -1,1 +1,42 @@
+body {
+  background-color: black;
+}
 
+#Carousel{
+  position: absolute;
+  width: 100%;
+  height: 150%;
+  overflow-y: hidden;
+  top: -80px;
+
+}
+
+#poster1, #poster2, #poster3 {
+  width: 100%;
+  opacity: 0.2;
+}
+
+.estrella {
+  display: inline;  
+  margin: 3px;
+  width: 35px;
+}
+
+
+.duracion > img {
+  padding-bottom: 5px;
+  width: 35px;
+}
+
+#pos1-estrella5 {
+  display: none;
+}
+
+.caption {
+  top: 30%;
+
+}
+
+#sinopsis-poster1, #sinopsis-poster2, #sinopsis-poster3  {
+  text-align: justify;
+}
