--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,11 +1,13 @@
 footer.footer{
-    background: #121212;
+    background: transparent;
     display: flex;
     padding: 8%;
     width: 100vw;
+    bottom: 0%;
 }
 
-footer>#logo-footer{
+
+#logo-footer{
     width: 10vw;
     height: 5vw;
 }
