--- a/src/styles/inTheater.css
+++ b/src/styles/inTheater.css
@@ -19,8 +19,10 @@
   
    .text > h3, .text > p {
     color:rgb(0, 0, 0) !important; 
+    margin: 2px;
     font-size: 1.8vw;
    }
+
 
    #overlay {
     top: 40vw;
