--- a/src/components/Carrusel/Carrusel.css
+++ b/src/components/Carrusel/Carrusel.css
@@ -39,3 +39,11 @@
 #sinopsis-poster1, #sinopsis-poster2, #sinopsis-poster3  {
   text-align: justify;
 }
+
+@media screen and (max-width:630px){
+  .caption > h2, .caption > p {
+    font-size: 2.8vw;
+    margin: 4px;
+    padding: 1px;
+  }
+}
