--- a/src/components/InTheater/InTheater.css
+++ b/src/components/InTheater/InTheater.css
@@ -41,3 +41,12 @@
     width: 100% !important; 
     height: 100% !important;
    }
+
+   @media screen and (max-width:630px)
+   {
+      .text > h3, .text > p {
+      color:rgb(0, 0, 0) !important; 
+      margin: 2px;
+      font-size: 2.2vw;
+      }
+   }
