--- a/src/pages/DetallePelicula/DetallePelicula.css
+++ b/src/pages/DetallePelicula/DetallePelicula.css
@@ -6,10 +6,13 @@
 }
 
 #DP-poster {
-    width: 70%;
+    width: 75%;
     border: 1px solid white;
     border-radius: 10px;
+    margin-top: 10px;
+    cursor: pointer;
 }
+
 
 .DP-informacion {
     color: white;
