--- a/src/components/Carrusel/Carrusel.css
+++ b/src/components/Carrusel/Carrusel.css
@@ -6,8 +6,9 @@
   overflow-y: hidden;
 }
 
-#poster1, #poster2, #poster3 {
-  width: 100% !important;
+#C-poster {
+  width: cover !important;
+  position: center;
   opacity: 0.2;
 }
 
@@ -27,10 +28,16 @@
 }
 
 .caption {
-  top: 25vw;
+  top: 40vw;
 }
 
-.caption > h2, .caption > p {
+.caption > h3 {
+  font-size: 2.5vw;
+  margin: 4px;
+  padding: 1px;
+}
+
+.caption > p {
   font-size: 2vw;
   margin: 4px;
   padding: 1px;
@@ -41,13 +48,19 @@
 }
 
 @media screen and (max-width:630px){
-  .caption > h2, .caption > p {
+  .caption > h3 {
+    font-size: 3.5vw;
+    margin: 4px;
+    padding: 1px;
+  }
+
+  .caption > p {
     font-size: 2.8vw;
     margin: 4px;
     padding: 1px;
   }
 
   .caption {
-    top: 15vw;
+    top: 35vw;
   }
 }
