--- a/src/components/Related/Related.css
+++ b/src/components/Related/Related.css
@@ -2,20 +2,19 @@
    overflow: hidden;
 }
 
-#overlay {
+#R-overlay {
    top: 40vw;
    overflow: hidden;
 }
 
 .star{
    display: inline;
-   margin-right: .5vw;
-   margin-left: .5vw;
-   width: 3vw;
+   margin-right: .3vw;
+   margin-left: .3vw;
    align-self: center;
 }
 
-.text > h3, .text > p {
+.R-text > h3, .R-text > p {
    color:rgb(255, 255, 255) !important; 
    margin: 2px;
    font-size: 1.8vw;
@@ -25,7 +24,7 @@
    opacity: 0.2;
 }
 
-.card:hover #overlay {
+.card:hover #R-overlay {
    top: .5vw;
    transition: all 1.5s;
 }
@@ -53,9 +52,9 @@
 
       .star{
          display: inline;
-         margin-right: .8vw;
-         margin-left: .8vw;
-         width: 2vw;
+         margin-right: .7vw;
+         margin-left: .7vw;
+         width: 3vw;
          align-self: center;
       }
    }
